#941 Fixed text overflowing error box

--- a/ADSM/static/css/adsm.css
+++ b/ADSM/static/css/adsm.css
@@ -2596,7 +2596,6 @@ span.IndirectSpread {
 }
 .simulation_error {
     background-color: #d0343a;
-    height: 120px;
     margin-bottom: 15px;
     text-align: center;
     vertical-align: middle;
